--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/DynamicPages/DynamicPageEditor.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/DynamicPages/DynamicPageEditor.html
@@ -9,7 +9,7 @@
             <div ng-show="settingSelected">
                 <vr-row>
                     <vr-columns width="1/3row">
-                            <vr-textbox value="pageName" label="Page Name" isrequired></vr-textbox>
+                        <vr-textbox value="pageName" label="Page Name" isrequired></vr-textbox>
                     </vr-columns>
                     <vr-columns width="1/3row">
                         <vr-section title="Module">
@@ -40,9 +40,9 @@
             </div>
             <div ng-show="designSelected">
                 <vr-form name="formDesigningSelectionModel">
-                    <vr-row>
+                    <vr-row removeLine>
                         <vr-columns width="normal">
-                            <vr-select label="Section:" datatextfield="Section" datavaluefield="ID"
+                            <vr-select label="Section:" datatextfield="description" datavaluefield="value" label="Section" onselectionchanged="onSectionChanged"
                                        datasource="sections" selectedvalues="selectedSection" isrequired></vr-select>
                         </vr-columns>
                         <vr-columns width="normal">
@@ -50,7 +50,7 @@
                                        datasource="widgets" selectedvalues="selectedWidget" isrequired></vr-select>
                         </vr-columns>
                         <vr-columns width="normal">
-                            <vr-select datasource="numberOfColumns" datatextfield="description" datavaluefield="value" label="Row Space" selectedvalues="selectedNumberOfColumns" isrequired hidefilterbox></vr-select>
+                            <vr-select datasource="columnWidth" datatextfield="description" datavaluefield="value" label="Row Space" selectedvalues="selectedColumnWidth" isrequired hidefilterbox></vr-select>
                         </vr-columns>
                     </vr-row>
                     <vr-row>
@@ -63,19 +63,32 @@
                     </div>
                 </vr-actionbar>
                 <div>
-                    <vr-row>
-                        <vr-columns ng-repeat="addedwidget in addedwidgets" colnum="{{addedwidget.NumberOfColumns}}">
-                            <i class="glyphicon glyphicon-th-list handeldrag"></i>
-                            <i class="glyphicon glyphicon-remove hand-cursor" ng-click="removeViewContent(addedwidget)"></i>
-                            <!--<vr-textbox value="visualElement.Name" label="{visualElement.Name}"></vr-textbox>-->
-                            <vr-directivewrapper directive="addedwidget.Setting.Directive" on-ready="addedwidget.onElementReady" settings="addedwidget.Setting.Settings"
-                                                 retrievedataonload="false" previewmode="true"></vr-directivewrapper>
-                        </vr-columns>
+                    <vr-row ng-if="addedSummaryWidgets.length>0">
+                        <vr-section title="Module">
+                            <div class="list-group dragbelzone" ng-sortable="itemsSortable">
+                                <vr-columns ng-repeat="addedSummaryWidget in addedSummaryWidgets" colnum="{{addedSummaryWidget.NumberOfColumns}}">
+                                    <i class="glyphicon glyphicon-th-list handeldrag"></i>
+                                    <i class="glyphicon glyphicon-remove hand-cursor" ng-click="removeViewContent(addedSummaryWidget)"></i>
+                                    <vr-directivewrapper directive="addedSummaryWidget.Widget.Setting.Directive" on-ready="addedSummaryWidget.Widget.onElementReady" settings="addedSummaryWidget.Widget.Setting.Settings"
+                                                         retrievedataonload="false" previewmode="true"></vr-directivewrapper>
+                                </vr-columns>
+                            </div>
+                        </vr-section>
+                    </vr-row>
+                    <vr-row ng-if="addedBodyWidgets.length>0">
+                        <div class="list-group dragbelzone" ng-sortable="itemsSortable">
+                            <vr-columns ng-repeat="addedBodyWidget in addedBodyWidgets" colnum="{{addedBodyWidget.NumberOfColumns}}">
+                                <i class="glyphicon glyphicon-th-list handeldrag"></i>
+                                <i class="glyphicon glyphicon-remove hand-cursor" ng-click="removeViewContent(addedBodyWidget)"></i>
+                                <vr-directivewrapper directive="addedBodyWidget.Widget.Setting.Directive" on-ready="addedBodyWidget.Widget.onElementReady" settings="addedBodyWidget.Widget.Setting.Settings"
+                                                     retrievedataonload="false" previewmode="true"></vr-directivewrapper>
+                            </vr-columns>
+                        </div>
                     </vr-row>
                 </div>
 
             </div>
-            <div ng-if="previewSelected && viewContents.length>0">
+            <div ng-if="previewSelected && (addedSummaryWidgets.length>0 ||addedBodyWidgets.length>0)">
                 <div ng-include="'Client/Modules/Security/Views/DynamicPages/DynamicPagePreview.html'"></div>
             </div>
         </vr-form>
