--- a/FZero/Vanrise.Fzero.Services.Report/Reports/rptToZainOperator.rdlc
+++ b/FZero/Vanrise.Fzero.Services.Report/Reports/rptToZainOperator.rdlc
@@ -107,7 +107,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Expected </Value>
+                              <Value>Mobile</Value>
                               <Style>
                                 <FontSize>9pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
@@ -119,7 +119,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Resolution</Value>
+                              <Value>Operator</Value>
                               <Style>
                                 <FontSize>9pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
@@ -152,7 +152,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>N/A</Value>
+                              <Value>=Fields!MobileOperatorName.Value</Value>
                               <Style>
                                 <FontSize>9pt</FontSize>
                                 <Color>DimGray</Color>
@@ -916,6 +916,61 @@
                 </TablixCell>
               </TablixCells>
             </TablixRow>
+            <TablixRow>
+              <Height>0.25in</Height>
+              <TablixCells>
+                <TablixCell>
+                  <CellContents>
+                    <Textbox Name="Textbox2">
+                      <CanGrow>true</CanGrow>
+                      <KeepTogether>true</KeepTogether>
+                      <Paragraphs>
+                        <Paragraph>
+                          <TextRuns>
+                            <TextRun>
+                              <Value>Total: </Value>
+                              <Style>
+                                <FontSize>8pt</FontSize>
+                                <FontWeight>Bold</FontWeight>
+                                <TextDecoration>None</TextDecoration>
+                              </Style>
+                            </TextRun>
+                            <TextRun>
+                              <Value>=Count(Fields!AttemptDateTime.Value)</Value>
+                              <Style>
+                                <FontSize>8pt</FontSize>
+                                <TextDecoration>None</TextDecoration>
+                              </Style>
+                            </TextRun>
+                          </TextRuns>
+                          <Style>
+                            <TextAlign>Right</TextAlign>
+                          </Style>
+                        </Paragraph>
+                      </Paragraphs>
+                      <rd:DefaultName>Textbox2</rd:DefaultName>
+                      <Style>
+                        <Border>
+                          <Color>LightGrey</Color>
+                          <Style>Solid</Style>
+                        </Border>
+                        <PaddingLeft>2pt</PaddingLeft>
+                        <PaddingRight>2pt</PaddingRight>
+                        <PaddingTop>2pt</PaddingTop>
+                        <PaddingBottom>2pt</PaddingBottom>
+                      </Style>
+                    </Textbox>
+                    <ColSpan>7</ColSpan>
+                  </CellContents>
+                </TablixCell>
+                <TablixCell />
+                <TablixCell />
+                <TablixCell />
+                <TablixCell />
+                <TablixCell />
+                <TablixCell />
+              </TablixCells>
+            </TablixRow>
           </TablixRows>
         </TablixBody>
         <TablixColumnHierarchy>
@@ -937,12 +992,15 @@
             <TablixMember>
               <Group Name="Details1" />
             </TablixMember>
+            <TablixMember>
+              <KeepWithGroup>Before</KeepWithGroup>
+            </TablixMember>
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
         <Top>2.73833in</Top>
         <Left>0.3125in</Left>
-        <Height>0.94792in</Height>
+        <Height>1.19792in</Height>
         <Width>6.12501in</Width>
         <ZIndex>3</ZIndex>
         <Style>
@@ -1118,7 +1176,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>3.80729in</Top>
+        <Top>4.18229in</Top>
         <Left>0.30729in</Left>
         <Height>0.59375in</Height>
         <Width>6.13021in</Width>
@@ -1299,7 +1357,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>4.55208in</Top>
+        <Top>4.92708in</Top>
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
         <Width>6.125in</Width>
@@ -1369,7 +1427,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>4.77083in</Top>
+        <Top>5.14583in</Top>
         <Left>0.30729in</Left>
         <Height>0.42188in</Height>
         <Width>1.69358in</Width>
@@ -1385,7 +1443,7 @@
         <Value>signature</Value>
         <MIMEType>image/gif</MIMEType>
         <Sizing>FitProportional</Sizing>
-        <Top>4.77083in</Top>
+        <Top>5.14583in</Top>
         <Left>2.00087in</Left>
         <Height>0.42188in</Height>
         <Width>4.43664in</Width>
@@ -1518,7 +1576,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>5.53in</Top>
+        <Top>5.905in</Top>
         <Left>0.3125in</Left>
         <Height>0.25in</Height>
         <Width>6.13542in</Width>
@@ -1625,7 +1683,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>5.88021in</Top>
+        <Top>6.25521in</Top>
         <Left>0.30729in</Left>
         <Height>1.13542in</Height>
         <Width>6.13021in</Width>
@@ -1838,7 +1896,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>7.19271in</Top>
+        <Top>7.56771in</Top>
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
         <Width>4.11609in</Width>
@@ -2022,7 +2080,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>7.56771in</Top>
+        <Top>7.94271in</Top>
         <Left>0.30729in</Left>
         <Height>0.21875in</Height>
         <Width>6.13021in</Width>
@@ -2145,7 +2203,7 @@
           </TablixMembers>
         </TablixRowHierarchy>
         <DataSetName>dsViewGeneratedCalls</DataSetName>
-        <Top>7.78906in</Top>
+        <Top>8.16406in</Top>
         <Left>0.3125in</Left>
         <Height>0.42188in</Height>
         <Width>6.125in</Width>
@@ -2815,7 +2873,7 @@
         </Style>
       </Tablix>
     </ReportItems>
-    <Height>8.21094in</Height>
+    <Height>8.58594in</Height>
     <Style />
   </Body>
   <Width>6.44792in</Width>
