font weight bug
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24297

--- a/Vanrise/Code/Vanrise.Web/Client/Styles/TOnv2theme.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/TOnv2theme.css
@@ -43,7 +43,7 @@
 }
 .selected-url{
      color: #6A7470 !important;
-     font-weight:bold ;
+     font-weight:bold !important;
 }
 
 .bold-item {   
