--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReportsCustomersSuppliers.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReportsCustomersSuppliers.html
@@ -1,26 +1,21 @@
 ﻿<div ng-controller="VariationReportsCustomersSuppliersController" vr-loader="isGettingData">
-    <h3>Customers/Suppliers Sale Zone</h3>
-    <vr-datagrid datasource="data">
+    <h4>Customers Sale Zone {{ ZoneName }} </h4> 
+    <vr-datagrid datasource="customersData" data-on-ready="onMainGridReady">
         <vr-datagridcolumn headertext="'Name'" field="'Name'"></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'_AVG'" field="'PeriodTypeValueAverage'" type="'Number'"></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'_%'" field="'PeriodTypeValuePercentage'" type="'Number'"></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'Previous_%'" field="'PreviousPeriodTypeValuePercentage'" type="'Number'"></vr-datagridcolumn>
-        <vr-datagridcolumn ng-repeat="item in timeRanges" field="'Values[' + $index + ']'" headertext="item" type="'Number'"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'_AVG'" field="'PeriodTypeValueAverage'" type="'Number'" summaryfield="'TotalAverage'"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'_%'" field="'PeriodTypeValuePercentage'" type="'Number'" summaryfield="'TotalPercentage'"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'Previous_%'" field="'PreviousPeriodTypeValuePercentage'" type="'Number'" summaryfield="'TotalPreviousPercentage'"></vr-datagridcolumn>
+        <vr-datagridcolumn ng-repeat="item in timeRanges" field="'Values[' + $index + ']'" headertext="item" type="'Number'" summaryfield="'TotalValues[' + $index + ']'"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'CarrierAccountID/ZoneID'" field="'ID'" ng-show="false"></vr-datagridcolumn>
     </vr-datagrid>
-    <vr-row>
-        <vr-columns colnum="2">
-            {{summarydata.TotalAverage}}
-        </vr-columns>
-        <vr-columns colnum="2">
-            {{summarydata.TotalPercentage}}
-        </vr-columns>
-        <vr-columns colnum="2">
-            {{summarydata.TotalPreviousPercentage}}
-        </vr-columns>
-        <vr-columns colnum="2">
-            Total Values
-            {{summarydata.TotalValues}}
-        </vr-columns>
-    </vr-row>
+
+    <!--<h4>Suppliers Sale Zone {{ ZoneName }} </h4>
+    <vr-datagrid datasource="suppliersData" data-on-ready="onMainGridReady">
+        <vr-datagridcolumn headertext="'Name'" field="'Name'"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'_AVG'" field="'PeriodTypeValueAverage'" type="'Number'" summaryfield="'TotalAverage'"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'_%'" field="'PeriodTypeValuePercentage'" type="'Number'" summaryfield="'TotalPercentage'"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'Previous_%'" field="'PreviousPeriodTypeValuePercentage'" type="'Number'" summaryfield="'TotalPreviousPercentage'"></vr-datagridcolumn>
+        <vr-datagridcolumn ng-repeat="item in timeRanges" field="'Values[' + $index + ']'" headertext="item" type="'Number'" summaryfield="'TotalValues[' + $index + ']'"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'CarrierAccountID/ZoneID'" field="'ID'" ng-show="false"></vr-datagridcolumn>
+    </vr-datagrid>-->
 </div>
