--- a/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReportsDestinations.html
+++ b/TOneV2/Code/TOneV2/TOne.Analytics.Web/Analytics/Views/Billing Statistics/VariationReportsDestinations.html
@@ -1,17 +1,18 @@
 ﻿<div ng-controller="VariationReportsDestinationsController" vr-loader="isGettingData">
-    <h3>{{selectedReportOption.description}}</h3>
-    <vr-datagrid datasource="data" >
+    <h4>{{selectedReportOption.description}}</h4>
+    <vr-datagrid datasource="data" data-on-ready="onMainGridReady">
         <vr-datagridcolumn headertext="'Name'" field="'Name'"></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'_AVG'" field="'PeriodTypeValueAverage'" type="'Number'"></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'_%'" field="'PeriodTypeValuePercentage'" type="'Number'"></vr-datagridcolumn>
-        <vr-datagridcolumn headertext="'Previous_%'" field="'PreviousPeriodTypeValuePercentage'" type="'Number'"></vr-datagridcolumn>
-        <vr-datagridcolumn ng-repeat="item in timeRanges" field="'Values[' + $index + ']'" headertext="item" type="'Number'"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'_AVG'" field="'PeriodTypeValueAverage'" type="'Number'" summaryfield="'TotalAverage'"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'_%'" field="'PeriodTypeValuePercentage'" type="'Number'" summaryfield="'TotalPercentage'"></vr-datagridcolumn>
+        <vr-datagridcolumn headertext="'Previous_%'" field="'PreviousPeriodTypeValuePercentage'" type="'Number'" summaryfield="'TotalPreviousPercentage'"></vr-datagridcolumn>
+        <vr-datagridcolumn ng-repeat="item in timeRanges" field="'Values[' + $index + ']'" headertext="item" type="'Number'" summaryfield="'TotalValues[' + $index + ']'"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'CarrierAccountID/ZoneID'" field="'ID'" ng-show="false"></vr-datagridcolumn>
-        <vr-datagridexpandablerow> <!--if reportOption=Out -- we should disable the expandable row-->
+        <vr-datagridexpandablerow>
+            <!--if reportOption=Out -- we should disable the expandable row-->
             <div ng-include="'/Client/Modules/Analytics/Views/Billing Statistics/VariationReportsCustomersSuppliers.html'"></div>
         </vr-datagridexpandablerow>
     </vr-datagrid>
-    <vr-row>
+    <!--<vr-row>
         <vr-columns colnum="2">
             {{summarydata.TotalAverage}}
         </vr-columns>
@@ -25,5 +26,5 @@
             Total Values
             {{summarydata.TotalValues}}
         </vr-columns>
-    </vr-row>
+    </vr-row>-->
 </div>
