--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/DynamicPages/DynamicPagePreview.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/DynamicPages/DynamicPagePreview.html
@@ -14,17 +14,18 @@
                 </vr-columns>
             </vr-row>
            </div>
+        <vr-row removeline>
+            <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
+                <div transclude-to="buttons">
+                    <vr-button type="Search" formname="formDynamicPagePreview" data-onclick="Search"></vr-button>
+                </div>
+            </vr-actionbar>
+        </vr-row>
 </vr-form>
-    <vr-row removeline>
-        <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
-            <div transclude-to="buttons">
-                <vr-button type="Search" formname="formDynamicPagePreview" data-onclick="Search"></vr-button>
-            </div>
-        </vr-actionbar>
-    </vr-row>
+
     <div vr-loader="isGettingData">
-            <vr-row ng-if="summaryWidgets.length>0">
-                <vr-section title="Module">
+            <vr-row ng-if="summaryWidgets.length>0" removeLine>
+                <vr-section title="Summary">
                     <div class="list-group dragbelzone" ng-sortable="itemsSortable">
                         <vr-columns ng-repeat="summaryWidget in summaryWidgets" colnum="{{summaryWidget.NumberOfColumns}}">
                             <vr-directivewrapper directive="summaryWidget.Setting.Directive" on-ready="summaryWidget.onElementReady" settings="summaryWidget.Setting.Settings"
@@ -40,6 +41,6 @@
                                              retrievedataonload="true" filter="filter"></vr-directivewrapper>
                     </vr-columns>
                 </div>
-        </vr-row>
+            </vr-row>
     </div>
 </vr-panel>
