--- a/Vanrise/Code/Vanrise.Security.Web/Security/Views/DynamicPages/DynamicPageEditor.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Views/DynamicPages/DynamicPageEditor.html
@@ -70,7 +70,7 @@
                                     <i class="glyphicon glyphicon-th-list handeldrag"></i>
                                     <i class="glyphicon glyphicon-remove hand-cursor" ng-click="removeViewContent(addedSummaryWidget)"></i>
                                     <vr-directivewrapper directive="addedSummaryWidget.Widget.Setting.Directive" on-ready="addedSummaryWidget.Widget.onElementReady" settings="addedSummaryWidget.Widget.Setting.Settings"
-                                                         retrievedataonload="false" previewmode="true"></vr-directivewrapper>
+                                                         retrievedataonload="true" previewmode="true"></vr-directivewrapper>
                                 </vr-columns>
                             </div>
                         </vr-section>
