git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24320

--- a/FZero/Vanrise.Fzero.Bypass.WebSite/Reports/rptToOperator.rdlc
+++ b/FZero/Vanrise.Fzero.Bypass.WebSite/Reports/rptToOperator.rdlc
@@ -852,7 +852,7 @@
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Left</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -869,6 +869,7 @@
                       </Style>
                     </Textbox>
                     <ColSpan>7</ColSpan>
+                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell />
@@ -1087,7 +1088,7 @@
         <Top>4.30729in</Top>
         <Left>0.3125in</Left>
         <Height>0.59375in</Height>
-        <Width>6.10432in</Width>
+        <Width>6.10433in</Width>
         <ZIndex>5</ZIndex>
         <Style>
           <Border>
@@ -1600,7 +1601,7 @@
         <Top>6.38021in</Top>
         <Left>0.3125in</Left>
         <Height>1.13542in</Height>
-        <Width>6.10432in</Width>
+        <Width>6.10433in</Width>
         <ZIndex>10</ZIndex>
         <Style>
           <Border>
@@ -1997,7 +1998,7 @@
         <Top>8.06771in</Top>
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
-        <Width>6.125in</Width>
+        <Width>6.12501in</Width>
         <ZIndex>12</ZIndex>
         <Style>
           <Border>
@@ -2885,7 +2886,7 @@
         <Top>1.977in</Top>
         <Left>0.3125in</Left>
         <Height>0.47916in</Height>
-        <Width>6.10432in</Width>
+        <Width>6.10433in</Width>
         <ZIndex>16</ZIndex>
         <Style>
           <Border>
