--- a/FZero/Vanrise.Fzero.Bypass.WebSite/Reports/rptToSyrianOperator.rdlc
+++ b/FZero/Vanrise.Fzero.Bypass.WebSite/Reports/rptToSyrianOperator.rdlc
@@ -238,7 +238,10 @@
         <Top>0.95708in</Top>
         <Left>0.3125in</Left>
         <Height>0.48958in</Height>
-        <Width>6.09911in</Width>
+        <Width>6.09914in</Width>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -254,6 +257,9 @@
         <Height>0.5in</Height>
         <Width>1.76042in</Width>
         <ZIndex>1</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
@@ -269,6 +275,9 @@
         <Height>0.59375in</Height>
         <Width>1.86458in</Width>
         <ZIndex>2</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
@@ -376,6 +385,9 @@
         <Height>0.47916in</Height>
         <Width>6.09911in</Width>
         <ZIndex>3</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -959,7 +971,7 @@
                             </TextRun>
                           </TextRuns>
                           <Style>
-                            <TextAlign>Right</TextAlign>
+                            <TextAlign>Left</TextAlign>
                           </Style>
                         </Paragraph>
                       </Paragraphs>
@@ -976,6 +988,7 @@
                       </Style>
                     </Textbox>
                     <ColSpan>7</ColSpan>
+                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell />
@@ -1016,7 +1029,7 @@
         <Top>2.98833in</Top>
         <Left>0.3125in</Left>
         <Height>1.26042in</Height>
-        <Width>6.09911in</Width>
+        <Width>6.09914in</Width>
         <ZIndex>4</ZIndex>
         <Style>
           <Border>
@@ -1196,6 +1209,9 @@
         <Height>0.59375in</Height>
         <Width>6.125in</Width>
         <ZIndex>6</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1377,6 +1393,9 @@
         <Height>0.21875in</Height>
         <Width>6.125in</Width>
         <ZIndex>7</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1600,8 +1619,11 @@
         <Top>6.03in</Top>
         <Left>0.3125in</Left>
         <Height>0.25in</Height>
-        <Width>6.09911in</Width>
+        <Width>6.09912in</Width>
         <ZIndex>10</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1709,6 +1731,9 @@
         <Height>1.13542in</Height>
         <Width>6.125in</Width>
         <ZIndex>11</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -1922,6 +1947,9 @@
         <Height>0.21875in</Height>
         <Width>4.11609in</Width>
         <ZIndex>12</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -2104,8 +2132,11 @@
         <Top>8.06771in</Top>
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
-        <Width>6.125in</Width>
+        <Width>6.12501in</Width>
         <ZIndex>13</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -2229,6 +2260,9 @@
         <Height>0.42188in</Height>
         <Width>6.125in</Width>
         <ZIndex>14</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>Solid</Style>
@@ -2560,8 +2594,11 @@
         <Top>1.60547in</Top>
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
-        <Width>6.09911in</Width>
+        <Width>6.0991in</Width>
         <ZIndex>15</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
@@ -2873,8 +2910,11 @@
         <Top>1.42188in</Top>
         <Left>0.3125in</Left>
         <Height>0.21875in</Height>
-        <Width>6.09911in</Width>
+        <Width>6.0991in</Width>
         <ZIndex>16</ZIndex>
+        <Visibility>
+          <Hidden>=Parameters!HideSignature.Value</Hidden>
+        </Visibility>
         <Style>
           <Border>
             <Style>None</Style>
