--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -51,6 +51,7 @@
 }
 .vr-breadcrumb{
     background-color:#fff !important;
+    padding: 0px 8px;
 }
 .inner-sub{
     height: 44px;
@@ -116,6 +117,24 @@ padding: 5px 2px;
 label{
     font-size:12px;
 }
+.modal-header {
+    min-height: 16.4286px;
+    padding: 2px 15px;    
+    border-radius: 6px 6px 0px 0px;
+    border-bottom: 1px solid #E5E5E5;
+    background-color: #20407D;
+    color: #FFF;
+}
+.modal-header .close {
+    float: right;
+    line-height: 1;
+    opacity: 1 !important;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    font-size: 21px;
+    text-shadow: 0px 1px 0px #FFF;
+}
+inp
 .menu-to-top{
     bottom: 100%;
     top: initial;
@@ -331,6 +350,9 @@ Use this for keyframe animations
 .action-bar{
     background-color: #e22337;
     margin-top:10px;
+}
+vr-modalcontent .action-bar{
+     margin:10px -15px 0px -15px !important;
 }
 .action-bar-left{   
     width:49%;
@@ -686,7 +708,7 @@ input.ui-grid-filter-input[type="text"] {
 }
 
 .dropdown-menu-custom-serf {
-    top: -3px;
+    top: 23px;
     left: 40px;
     border-radius: 0px;
     background-color:#f0f0f0 !important;
@@ -1214,6 +1236,34 @@ input.ui-grid-filter-input[type="text"] {
     }
 
 /**************END Pagination*********/
+
+
+/**************START VR-TABS*********/
+
+    .vr-tabs {
+        border-bottom: 1px solid #ddd !important;
+        width: 100% ;
+        position: relative;
+    }
+    .vr-tabs label{
+       padding: 1px 7px;
+       display:inherit !important;
+    }
+    .vr-tabs .clicked-btn {
+        border-width: 1px;
+        border-style: solid;      
+        background-color: #FFF !important;
+        margin-bottom: -1px !important;
+        border: 1px solid #DDD;
+        border-bottom-color: transparent;
+        background-color: #FFF;
+    }
+    .remove-line{
+        border-bottom: 0px solid #F0F0F0 !important;
+        padding:0px 10px;
+    }
+
+/**************END VR-TABS*********/
 
 .clockspace{
     display:inline-block;
