--- a/FZero/Vanrise.Fzero.Bypass.WebSite/Reports/rptRepeatedToZainOperator.rdlc
+++ b/FZero/Vanrise.Fzero.Bypass.WebSite/Reports/rptRepeatedToZainOperator.rdlc
@@ -387,7 +387,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Suspected Number/Trunks amd Usage Summary</Value>
+                              <Value>Suspected Number/Trunks and Usage Summary</Value>
                               <Style>
                                 <FontSize>9pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
