--- a/FZero/Vanrise.Fzero.Bypass.WebSite/Reports/rptToSyrianOperator.rdlc
+++ b/FZero/Vanrise.Fzero.Bypass.WebSite/Reports/rptToSyrianOperator.rdlc
@@ -988,7 +988,6 @@
                       </Style>
                     </Textbox>
                     <ColSpan>7</ColSpan>
-                    <rd:Selected>true</rd:Selected>
                   </CellContents>
                 </TablixCell>
                 <TablixCell />
@@ -1057,7 +1056,7 @@
                         <Paragraph>
                           <TextRuns>
                             <TextRun>
-                              <Value>Suspected Number/Trunks amd Usage Summary</Value>
+                              <Value>Suspected Number/Trunks and Usage Summary</Value>
                               <Style>
                                 <FontSize>9pt</FontSize>
                                 <FontWeight>Bold</FontWeight>
