breadcrumb label font bug
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C24325

--- a/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
+++ b/Vanrise/Code/Vanrise.Web/Client/CSViews/Home/Index.cshtml
@@ -35,7 +35,7 @@
                 <li><a href="#/default">Home</a></li>
                 <li><label >{{breadcrumb.parent.Name}}</label></li>
                 <li ng-if="menusubItemsCurrent!=null"><label>{{breadcrumb.subparent.Name}}</label></li>
-                <li class="active">{{breadcrumb.leaf.Name}}</li>
+                <li class="active"><label>{{breadcrumb.leaf.Name}}</label></li>
             </ol>
         </div>
     </div>
